<resources>
    <string name="app_name">Skeletonton Quiz</string>
    <string name="truebutton">TRUE</string>
    <string name="falsebutton">FALSE</string>
    <string name="nextbutton">Next</string>
    <string name="previousbutton">Previous</string>
    <string name="msgcorrect">Your answer is Correct!</string>
    <string name="msgincorrect">Your answer is Wrong!</string>
    <string name="author">Author: Angel Hamelton O. Yacapin</string>

    <string name="congratulations_message">Congratulations!</string>

    <string name="q1">Q1: The adult human body has 206 of them.</string>
    <string name="q2">Q2: There are 28 ones in the human foot.</string>
    <string name="q3">Q3: The human hand, including the wrist, contains 54 bones.</string>
    <string name="q4">Q4: The femur, or thighbone, is the longest and strongest bone of the human skeleton.</string>
    <string name="q5">Q5: The stapes, in the middle ear, is the smallest and lightest bone of the human skeleton.</string>
    <string name="q6">Q6: Arms are among the most commonly broken bones, accounting for almost half of all adults broken bones. The collarbone is the most commonly broken bone among children.</string>
    <string name="q7">Q7: Bones stop growing in length during Adulthood.</string>
    <string name="q8">Q8: The only bone in the human body not connected to another is the hyoid, a V-shaped bone located at the base of the tongue.</string>
    <string name="q9">Q9: Bones are made up of calcium, phosphorus, sodium, Iron and other minerals, as well as the protein collagen.</string>
    <string name="q10">Q10: Bones function as the skeleton of the human body, allow body parts to move and protect organs from impact damage. They also produce red and white blood cells.</string>
    <string name="q11">CONGRATS!!!!</string>

    <string name="a1">true</string>
    <string name="a2">false</string>
    <string name="a3">true</string>
    <string name="a4">true</string>
    <string name="a5">true</string>
    <string name="a6">true</string>
    <string name="a7">false</string>
    <string name="a8">true</string>
    <string name="a9">false</string>
    <string name="a10">true</string>





</resources>